--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   image_picker: ^1.0.4
   image_cropper: ^5.0.0
   flutter_image_compress: ^2.0.4
+  flutter_slidable: ^3.0.0
+
 
 dev_dependencies:
   flutter_test:
