--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,7 @@ dependencies:
   image_cropper: ^5.0.0
   flutter_image_compress: ^2.0.4
   flutter_slidable: ^3.0.0
-
+  flutter_sticky_header: ^0.6.5
 
 dev_dependencies:
   flutter_test:
