--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,10 +38,14 @@ dependencies:
   flutter_date_pickers: ^0.4.2
   image_picker: ^1.0.4
   image_cropper: ^5.0.0
+  file_picker: ^5.5.0
   flutter_image_compress: ^2.0.4
   flutter_slidable: ^3.0.0
   flutter_sticky_header: ^0.6.5
-
+  firebase_core: ^2.18.0
+  firebase_auth: ^4.12.0
+  http: ^1.1.0
+  provider: ^6.0.5
 dev_dependencies:
   flutter_test:
     sdk: flutter
