--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   url_launcher: ^6.2.1
   provider: ^6.0.5
   cloud_firestore: ^4.10.0
+  firebase_storage: ^11.5.1
   device_info_plus: ^9.1.0
   firebase_messaging: ^14.7.3
   flutter_local_notifications: ^16.1.0
