--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 1.0.3+4
 
 environment:
   sdk: '>=2.19.6 <3.0.0'
@@ -38,6 +38,7 @@ dependencies:
   flutter_svg: ^2.0.7
   intl: ^0.18.1
   flutter_date_pickers: ^0.4.2
+  email_validator: ^2.1.17
   image_picker: ^1.0.4
   image_cropper: ^5.0.0
   file_picker: ^5.5.0
@@ -57,6 +58,9 @@ dependencies:
   flutter_local_notifications: ^16.1.0
   isar: *isar_version
   isar_flutter_libs: *isar_version # contains Isar Core
+  geolocator: ^10.1.0
+  geocoding: ^2.1.1
+  permission_handler: ^11.1.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
