--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,41 +32,41 @@ isar_version: &isar_version 3.1.0 # define the version to be used
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.2
-  path_provider: ^2.1.1
-  lottie: ^2.6.0
-  flutter_svg: ^2.0.7
-  intl: ^0.18.1
-  flutter_date_pickers: ^0.4.2
-  email_validator: ^2.1.17
-  image_picker: ^1.0.4
-  image_cropper: ^5.0.0
-  file_picker: ^5.5.0
-  flutter_image_compress: ^2.0.4
-  flutter_slidable: ^3.0.0
-  flutter_sticky_header: ^0.6.5
-  firebase_core: ^2.18.0
-  firebase_auth: ^4.12.0
-  shared_preferences: ^2.2.2
-  http: ^1.1.0
-  url_launcher: ^6.2.1
-  provider: ^6.0.5
-  cloud_firestore: ^4.10.0
-  firebase_storage: ^11.5.1
-  device_info_plus: ^9.1.0
-  firebase_messaging: ^14.7.3
-  flutter_local_notifications: ^16.1.0
+  cupertino_icons: any
+  path_provider: any
+  lottie: any
+  flutter_svg: any
+  intl: any
+  flutter_date_pickers: any
+  email_validator: any
+  image_picker: any
+  image_cropper: any
+  file_picker: any
+  flutter_image_compress: any
+  flutter_slidable: any
+  flutter_sticky_header: any
+  firebase_core: any
+  firebase_auth: any
+  shared_preferences: any
+  http: any
+  url_launcher: any
+  provider: any
+  cloud_firestore: any
+  firebase_storage: any
+  device_info_plus: any
+  firebase_messaging: any
+  flutter_local_notifications: any
   isar: *isar_version
   isar_flutter_libs: *isar_version # contains Isar Core
-  geolocator: ^10.1.0
-  geocoding: ^2.1.1
-  permission_handler: ^11.1.0
+  geolocator: any
+  geocoding: any
+  permission_handler: any
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
-  flutter_native_splash: ^2.3.2
-  flutter_launcher_icons: "^0.13.1"
+  flutter_lints: any
+  flutter_native_splash: any
+  flutter_launcher_icons: any
   isar_generator: *isar_version
   build_runner: any
 
